@@ -2,6 +2,7 @@ Changes from jTDS 1.2.5
 =======================
 
 05/17/2010 - Holger Rehn
+ o Improved error messages if a value cannot be converted to a given SQL type.
  o Corrected bug [3000472], TimerThread started when closing last connection.
  o Fixed method synchronization in TimerThread.
 
